<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="4dp">
    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TitleMain"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="12sp"
            android:padding="2dp"/>
        <Button
            android:id="@+id/check_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_login_and_password"
            android:textSize="12sp"
            android:padding="2dp"/>
        <Button
            android:id="@+id/clear_pswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_user_info"
            android:textSize="12sp"
            android:padding="2dp"/>
        <Button
            android:id="@+id/load_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_data"
            android:textSize="12sp"
            android:padding="2dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/show_marks_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_marks"
            android:textSize="12sp"
            android:padding="2dp"/>
        <Button
            android:id="@+id/show_messages_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_messages"
            android:textSize="12sp"
            android:padding="2dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/debug_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debug_message"/>

    <android.support.v7.widget.RecyclerView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/schedule_recycle_view"
        />
</LinearLayout>