<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/user_login_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_login_dialog"/>
    <EditText
        android:id="@+id/user_pswd_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enter_password_dialog"/>
    <TextView
        android:id="@+id/dialog_debug_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_debug_msg"/>

</LinearLayout>
